--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,32 @@ jobs:
   build:
     runs-on: ubuntu-latest
  
-    steps: 
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE
+      - uses: actions/checkout@v3
+ 
+      # Setup Python 3.13.9
+      - name: Set up Python 3.13.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.13.9"
+      
+      # Check Env Variables
+      - name: Check Env
+        run: |
+          echo $CSV_URL
+ 
+      # Install mlflow
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install mlflow
+      
+      # Run as a mlflow project
+      - name: Run mlflow project
+        run: |
+          mlflow run MLproject --env-manager=local 
+ 
       # Save models to GitHub Repository
       - name: Save mlruns to repo
         run: |
