--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,61 +1,36 @@
 name: CI
- 
+
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
   pull_request:
-    branches:
-      - main
- 
-env:
-  CSV_URL: "MLproject/titanic.csv"
- 
+    branches: ["main"]
+
 jobs:
   build:
     runs-on: ubuntu-latest
- 
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE
-      - uses: actions/checkout@v3
- 
-      # Setup Python 3.13.9
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up Python 3.13.9
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.13.9"
-      
-      # Check Env Variables
-      - name: Check Env
+
+      - name: Check environment
         run: |
-          echo $CSV_URL
- 
-      # Install mlflow
+          python --version
+          pip --version
+          which python
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow
-      
-      # Run as a mlflow project
-      - name: Run mlflow project
+          pip install mlflow pandas numpy scikit-learn scipy pyarrow psutil cloudpickle
+
+      - name: Run MLflow project
         run: |
-          mlflow run MLproject --env-manager=local 
- 
-      - name: Set up Git LFS
-        run: |
-          git config --global user.name ${{ secrets.username }}
-          git config --global user.email ${{ secrets.email }}
-          git lfs install
-          git lfs track "mlruns/**"
-          git add .gitattributes
-          git commit -m "Track large files in mlruns with Git LFS" || true
-          git push origin main
-          
-       # Save models to GitHub Repository
-      - name: Save mlruns to repo
-        run: |
-          git config --global user.name ${{ secrets.username }}
-          git config --global user.email ${{ secrets.email }}
-          git add -f mlruns/
-          git commit -m "Save mlruns from CI run" || true
-          git push origin main
+          cd ML0roject
+          mlflow run . --entry-point main --experiment-name modelling --env-manager=local
